fixed save_screen png for screens loading in report

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -252,7 +252,7 @@ The game provides immediate visual feedback for actions, such as highlighting se
   \hfill
 
   \begin{figure*}% 4th figure*
-    \includegraphics[width=\linewidth]{game_screen.png}
+    \includegraphics[width=\linewidth]{save_screen.png}
     \caption{Save screen\dots}
     \label{fig:fourth}
   \end{figure*}%
