--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -232,35 +232,35 @@ The game provides immediate visual feedback for actions, such as highlighting se
 
   \begin{figure*}% 1st figure*
     \includegraphics[width=\linewidth]{start_screen.png}
-    \caption{Start screen\dots}
+    \caption{Start screen.}
     \label{fig:first}
   \end{figure*}%
   \hfill
 
   \begin{figure*}% 2nd figure*
     \includegraphics[width=\linewidth]{game_screen.png}
-    \caption{Game screen\dots}
+    \caption{Game screen.}
     \label{fig:second}
   \end{figure*}%
   \hfill \break
   
   \begin{figure*}% 3rd figure*
     \includegraphics[width=\linewidth]{load_screen.png}
-    \caption{Load screen\dots}
+    \caption{Load screen.}
     \label{fig:third}
   \end{figure*}%
   \hfill
 
   \begin{figure*}% 4th figure*
     \includegraphics[width=\linewidth]{save_screen.png}
-    \caption{Save screen\dots}
+    \caption{Save screen.}
     \label{fig:fourth}
   \end{figure*}%
   \hfill \break
 
   \begin{figure*}% 5th figure*
     \includegraphics[width=\linewidth]{settings_screen.png}
-    \caption{Settings screen\dots}
+    \caption{Settings screen.}
     \label{fig:fifth}
   \end{figure*}%
 
