Compiled report, fixed work division

--- a/Work Division/Work_Division.tex
+++ b/Work Division/Work_Division.tex
@@ -36,9 +36,8 @@ breaklines=true
 % Authors should be listed in order of contribution to the paper, by first name, then middle initial (if any), followed by last name.
 % Authors should be listed in the order in which they will appear in the published version if the manuscript is accepted. 
 % Use an asterisk (*) to identify the corresponding author, and be sure to include that person’s e-mail address. Use symbols (in this order: †, ‡, §, ||, ¶, #, ††, ‡‡, etc.) for author notes, such as present addresses, “These authors contributed equally to this work” notations, and similar information.
-\begin{otherlanguage}{vietnam}
 \date{Last edited day: \selectlanguage{english}\today}
-\end{otherlanguage}
+\author{}
 %%%%%% Affiliations %%%%%%
 
 %%%%%% Date %%%%%%
